@@ -233,6 +233,8 @@ Chronological list of authors
   - Lawson Woods
   - Johannes Stöckelmaier
   - Jenna M. Swarthout Goddard
+  2024
+  - Aditya Keshari
 
 External code
 -------------
